# soliplex-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  zensical.toml
.github/workflows/: build-skill.yaml  docs-lint.yaml  docs.yaml  issue-opened.yaml  pr-opened.yaml  pypi.yaml  python-lint.yaml  python-test.yaml
.secrets/: README.md
authelia/: Dockerfile  README.md  configuration.yml  configuration.yml.in  users_database.yml  users_database.yml.in
backend/: Dockerfile  README.md  constraints.txt
backend/environment/: haiku.rag.yaml  installation.yaml  logging.yaml
backend/environment/completions/chat-bot/: completion_config.yaml  prompt.txt
backend/environment/oidc/: cacert.pem  cacert.pem.in  config.yaml  config.yaml.in
backend/environment/rooms/chat/: room_config.yaml
backend/environment/rooms/feedback/: room_config.yaml
backend/environment/rooms/quizzer/: room_config.yaml
backend/sandbox/environments/pandas-only/: pyproject.toml
backend/sandbox/workdirs/: README.md
db/: README.md
db/rag/: README.md
docling-serve/: Dockerfile
docs/: index.md
docs/architecture/: backend.md  configuration.md  services.md
docs/contributing/: generator.md  index.md
docs/getting-started/: generator.md  installation.md
docs/getting-started/tutorials/: 01-first-steps.md  02-populate-rag.md  03-add-a-custom-tool.md  03-work-with-gitea.md  04-additional-topics.md  04-next-steps.md  04-work-with-gitea.md  concierge-admin.md  concierge-room.md  separate-rag-database.md  work-with-gitea.md
docs/operations/: ingester.md  rag.md  secrets.md
docs/users/: custom-package.md  index.md  installation.md
docs/users/architecture/: backend.md  configuration.md  services.md
docs/users/getting-started/: generator.md  installation.md
docs/users/operations/: ingester.md  rag.md  secrets.md
haiku.rag/: Dockerfile  haiku.rag.yaml
nginx/: Dockerfile  mime.types  nginx.conf
nginx/error-pages/: 50x.html
nginx/error-pages/error-pages/: 400.html
postgres/: Dockerfile  README.md
postgres/config/: init.sh
rag/docs/: README.md
scripts/: build_skill.py  generate-nginx-cert.sh  generate-secrets.sh  init_gitea.py  refresh_skill_template.py
skill/: SKILL.md
skill/assets/template/: .gitignore  CLAUDE.md  CLAUDE.md.mako  README.md.mako  docker-compose.yml.mako  pyproject.toml.mako  zensical.toml.mako
skill/assets/template/backend/: Dockerfile  pyproject.toml
skill/assets/template/backend/environment/: haiku.rag.yaml.mako  installation.yaml.mako  logging.yaml
skill/assets/template/docs/: index.md.mako
skill/assets/template/docs/architecture/: backend.md.mako  services.md.mako
skill/assets/template/docs/getting-started/: installation.md.mako
skill/assets/template/docs/operations/: ingester.md.mako  rag.md.mako  secrets.md.mako
skill/assets/template/haiku.rag/: Dockerfile  haiku.rag.yaml.mako
skill/assets/template/keycloak/: README.md
skill/assets/template/nginx/: Dockerfile.mako  nginx.conf.mako
skill/assets/template/nginx/error-pages/: 404.html
skill/assets/template/postgres/config/: init.sh.mako
skill/assets/template/rag/: README.md
skill/assets/template/scripts/: generate-secrets.sh  init-gitea.sh
skill/assets/template/src/__package__/: tools.py.mako
skill/assets/template/tests/unit/: test_tools.py.mako  test_views.py.mako
skill/assets/template/tui/: Dockerfile
skill/references/: PARAMETERS.md
skill/scripts/: generate.py  generate_soliplex_project.py  rag_db.py  skill_versions.py  soliplex_config.py
skills/soliplex-template/: SKILL.md
skills/soliplex-template/assets/: aliases.json
skills/soliplex-template/assets/rooms/chat/: room_config.yaml.mako
skills/soliplex-template/assets/rooms/minimal/: room_config.yaml.mako
skills/soliplex-template/assets/rooms/sandbox/: room_config.yaml.mako
skills/soliplex-template/assets/rooms/search/: room_config.yaml.mako
skills/soliplex-template/assets/template/: .gitignore  CLAUDE.md.mako  LICENSE  README.md.mako  docker-compose.yml.mako  pyproject.toml.mako  zensical.toml.mako
skills/soliplex-template/assets/template/backend/: README.md.mako  constraints.txt.mako
skills/soliplex-template/assets/template/backend/environment/: installation.yaml.mako
skills/soliplex-template/assets/template/docs/: custom-package.md.mako  index.md.mako  installation.md.mako
skills/soliplex-template/assets/template/docs/architecture/: configuration.md.mako  services.md.mako
skills/soliplex-template/assets/template/docs/getting-started/: installation.md.mako
skills/soliplex-template/assets/template/haiku.rag/: haiku.rag.yaml.mako
skills/soliplex-template/assets/template/nginx/: Dockerfile.mako  README.md  nginx.conf.mako  post-build-cache-bust.sh
skills/soliplex-template/assets/template/postgres/: Dockerfile
skills/soliplex-template/assets/template/scripts/: generate_secrets.py  init_gitea.py
skills/soliplex-template/assets/template/tui/: constraints.txt.mako
skills/soliplex-template/references/: PARAMETERS.md
skills/soliplex-template/scripts/: add_room.py  generate_soliplex_project.py  rag_db.py  skill_versions.py  soliplex_config.py
soliplex/: Dockerfile  README.md
soliplex-tui/: README.md
soliplex/environment/: haiku.rag.yaml  installation.yaml
soliplex/environment/oidc/: config.yaml
soliplex/environment/rooms/analysis/: room_config.yaml
soliplex/environment/rooms/chat/: room_config.yaml
soliplex/environment/rooms/faux/: room_config.yaml
soliplex/environment/rooms/search/: room_config.yaml
src/soliplex_template/: gitea.py  rooms.py  secrets.py
tests/functional/: conftest.py  test_generate_project.py
tests/unit/: test_gitea.py  test_rooms.py  test_secrets.py
tests/unit/scripts/: test_add_room.py  test_aliases_manifest.py  test_build_skill.py  test_generate.py  test_generate_secrets.py  test_generate_soliplex_project.py  test_init_gitea.py  test_rag_db.py  test_refresh_skill_template.py  test_skill_versions.py  test_soliplex_config.py
tui/: Dockerfile  constraints.txt
(+17 files in other folders)
