[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soliplex-template"
version = "0.13dev0"
description = "Docker Compose template for a Soliplex stack, plus the soliplex-template Agent Skill and its build tooling."
readme = "README.md"
requires-python = ">=3.12"
# The 'soliplex_template' package (src/) is stdlib-only; its modules
# ('secrets', 'gitea') back the repo's provisioning scripts. (The bundled
# skill's add_room.py gets its room-wiring core from 'soliplex-plumber'.)
dependencies = []

# Tooling for the soliplex-template skill. The scripts also carry PEP 723
# inline metadata so they can run standalone via `uv run <script>`, but the
# CI workflow installs this group with `uv sync --frozen --group dev`:
#   - mako:       scripts/refresh_skill_template.py and
#                 skill/scripts/generate_soliplex_project.py
#                 render the .mako template tree
#   - skills-ref: scripts/build_skill.py validates the assembled skill against
#                 the Agent Skills spec (provides the `agentskills` CLI)
#   - pyyaml:     skill/scripts/soliplex_config.py parses `soliplex-cli config`
#                 output (resolved installation YAML)
#   - pytest / pytest-cov / coverage: run the tests/unit/scripts/ suite
#                 (`uv run --group dev pytest`)
#   - zensical:   builds the documentation site under docs/ into site/
#                 (`uv run zensical build`); also drives the docs CI workflow
[dependency-groups]
dev = [
    "coverage",
    "mako",
    "pyyaml",
    "pytest",
    "pytest-cov",
    "ruff",
    # Direct runtime dep of generate_soliplex_project.py (read_properties);
    # pinned to match that script's PEP 723 header.
    "skills-ref==0.1.1",
    "soliplex-skills >= 0.5",
    # The bundled add_room.py imports 'soliplex_plumber.rooms'; the unit suite
    # loads that script by path, so the test env must provide it. Pinned to
    # match add_room.py's PEP 723 header.
    "soliplex-plumber >= 0.2.1",
    "zensical",
]

# The repo is configuration + Dockerfiles + skill source, but it also ships the
# importable 'soliplex_template' package (src/), so it builds as a wheel.
# PEP 420 # namespace package (no __init__.py);
# clients import the module directly, e.g.
# 'from soliplex_template import secrets'.
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

# Hermetic unit tests for the repo's Python scripts. The suite holds 100% branch
# coverage; --cov=scripts measures the repo-level build tooling, --cov=skill/scripts
# the bundled generator/version helpers, and --cov=tests/unit keeps the test
# files themselves dead-code-free.
[tool.pytest.ini_options]
python_files = "test_*.py"
# Functional tests live under tests/functional/ and are opt-in (they generate a
# real project and shell out to git/openssl/docker). Run them explicitly with
#   uv run --group dev pytest tests/functional --no-cov
# (--no-cov because the generator runs in a child process, so it isn't measured
# and would otherwise trip --cov-fail-under). They are not collected by default.
testpaths = ["tests/unit"]
addopts = "--cov=scripts --cov=skills/soliplex-template/scripts --cov=src/soliplex_template --cov=tests/unit --cov-branch --cov-fail-under=100"
markers = [
    "needs_docker: functional test requiring the docker CLI + daemon",
]

[tool.coverage.report]
show_missing = true

# Lint/format config mirrors soliplex/soliplex (same rule selection, line length,
# single-line imports, and pytest-style tweaks). ruff-format is enforced by the
# pre-commit hook; `ruff check` uses these rules on demand.
[tool.ruff]
line-length = 79
exclude = [
]
target-version = "py313"

[tool.ruff.lint]
select = [
    # flake8
    "F",
    # pycodestyle
    "E",
    # flake8-bugbear
    "B",
    # pyupgrade
    "U",
    # isort
    "I",
    # pandas vet
    "PD",
    # tryceratops
    "TRY",
    # flake8-pytest-style
    "PT",
]
ignore = [
    "PT019",  # incorrecly flags '@mock.patch' args as fixtures
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

# pymarkdown config mirrors soliplex/soliplex (front-matter on; the noisy
# stylistic rules disabled).
[tool.pymarkdown]
extensions.front-matter.enabled = true
plugins.line-length.enabled = false             # md013
plugins.no-duplicate-heading.enabled = false    # md024
plugins.no-inline-html.enabled = false          # md033
plugins.no-emphasis-as-heading.enabled = false  # md036
plugins.first-line-heading.enabled = false      # md041
plugins.code-block-style.enabled = false        # md046


# Lets the `soliplex-skills` console script (and CI) manage the published
# `soliplex-template` skill without repeating these constants on the command
# line. The bundled scripts/skill_versions.py hardcodes the same values, since
# it cannot read this file once the skill is installed elsewhere.
[[tool.soliplex-skills.skill]]
name = "soliplex-template"
owner = "soliplex"
repo = "soliplex-template"
asset_tarball = "soliplex-template-skill.tar.gz"
pointer_tag = "template-skill-latest"
rolling_prefix = "template-skill"
